2007-06-22  Luca Bruno  <lethalman88@gmail.com>

	* Doxyfile (LATEX_OUTPUT): added
	(OUTPUT): moved to build directory

	* Separated executable binaries from libraries by adding directory src
	
	* Now the build process is done in a separate directory named 'build'

	* Fixed scheduled processes

	* Added plugins support
	
	* Added a basic Gtk plugin for test

2007-06-21  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-object.c (syx_object_new_size): alloc for byte size if object has no references

	* Use timeval to benchmark the tests

	* Removed SmallFloats and added only Floats. Therefore, SmallIntegers are again 31 bit wide

2007-06-19  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-memory.c (syx_memory_load_image): fixed
	
	* syx/syx-platform.h: added
	
	* syx/syx-enums.h (SyxVariables): added Metaclass instanceClass
	
	* Smalltalk: added tracebacks and other stuff

2007-06-18  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-parser.c (_syx_parser_parse_term): added negation

	* syx/syx-lexer.c (_syx_lexer_token_number): added radix numbers

	* Done a refactoring to use pointers instead of indexes for oops
	

2007-06-17  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-primitives.c (Signal_findHandlerContext): fixed

	* syx/syx-error.h (syx_debug): added

	* syx/syx-utils.c (syx_send_message): added

2007-06-15  Luca Bruno  <lethalman88@gmail.com>

	* Added floats

	* syx/syx-memory.c (syx_memory_load_image): do not add extra byte for strings
	(strndup): added if missing in other environments
	(memdup): same

	* SConstruct: added various options and organized for a better debugging

	* syx/syx-object.c (syx_string_new): add 1 to the size to hold NULL char
	(syx_symbol_new): same

	* syx/syx-interp.c (syx_interp_mark_arguments): do not alloc if not arguments are given.
	Fixed memory leaks.
	Do not pass the execution state trough parameters, instead keep it global.
	This would produce a better C/Smalltalk interface

	* st/kernel/ObjectMemory.st: adjusted
	