@@ -9,7 +9,7 @@ main (int argc, char *argv[])
 
   syx_init (".");
 
-  lexer = syx_lexer_new ("nameconst 123 16r123 123.321 $c $  #symbol #(aaa) \"comment\" 'string' + := -> !!");
+  lexer = syx_lexer_new ("nameconst 123 16r123 123.321 1e2 1.3e-2 $c $  #symbol #(aaa) \"comment\" 'string' + := -> !!");
 
   token = syx_lexer_next_token (lexer);
   assert (token.type == SYX_TOKEN_NAME_CONST);
@@ -28,6 +28,16 @@ main (int argc, char *argv[])
   token = syx_lexer_next_token (lexer);
   assert (token.type == SYX_TOKEN_FLOAT_CONST);
   assert (token.value.floating == 123.321);
+  syx_token_free (token);
+
+  token = syx_lexer_next_token (lexer);
+  assert (token.type == SYX_TOKEN_FLOAT_CONST);
+  assert (token.value.floating == 100.0);
+  syx_token_free (token);
+
+  token = syx_lexer_next_token (lexer);
+  assert (token.type == SYX_TOKEN_FLOAT_CONST);
+  assert (token.value.floating == 0.013);
   syx_token_free (token);
 
   token = syx_lexer_next_token (lexer);
